deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fagkveld-feb-2020
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: fagkveld-feb-2020
    spec:
      containers:
        - name: fagkveld-feb-2020
          image: gcr.io/GKE_PROJECT/IMAGE:TAG
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
