loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: fagkveld-feb-2020-loadbalancer
  labels:
    app: fag
spec:
  selector:
    app: fagkveld-feb-2020
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "35.244.253.18"
