service.yml
apiVersion: v1
kind: Service
metadata:
  name: fagkveld-feb-2020-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: fagkveld-feb-2020
