ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fagkveld-feb-2020-ingress
  labels:
    app: fag
spec:
  backend:
    serviceName: fagkveld-feb-2020
    servicePort: 8080
